--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forside</title>
     <link rel="stylesheet" href="style.css">
+    <script src="./forside.js" defer></script>
 </head>
 
+
 <body>
+    <header>
+        <a href="index.html">Forside</a>
+        <a href="produkt.html">produkt</a>
+        <a href="produktliste.html">produktliste</a>
+    </header>
+
+
     <div class="category_list_container">
         <a class="category" href="produktliste.html"">Accessories</a>
         <a class=" category" href="produktliste.html"">Apparel</a>
@@ -21,7 +30,7 @@
 
 
 
-
+<footer>Lavet af Axel</footer>
 </body>
 
 </html>
